--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -3,7 +3,7 @@
     <div class="span12">
       <div class="box bordered">
         <div class="box-header">
-          <i class="icon-user"></i> New User
+          <i class="icon-user"></i> <%= t(:new_user) %>
         </div>
         <%= form_for [:admin, @user] do |f| %>
             <%= render :partial => "form", :locals => {:f => f} %>
@@ -11,8 +11,8 @@
               <div class="span6">
                 <div class="padded">
                   <div class="vpadded">
-                    <%= f.submit "Create", :class => "btn medium-blue" %> or
-                    <%= link_to "Cancel", admin_users_path %>
+                    <%= f.submit t(:create), :class => "btn medium-blue" %> or
+                    <%= link_to t(:cancel), admin_users_path %>
                   </div>
                 </div>
               </div>
