--- a/app/views/widgets/_form.html.erb
+++ b/app/views/widgets/_form.html.erb
@@ -8,5 +8,5 @@
 
 <% end %>
 <li class="comment-box view-more" style="text-align: center">
-  <%= link_to_next_page @comments, 'View More', :remote => true %>
+  <%= link_to_next_page @comments, t(:view_more), :remote => true %>
 </li>
