--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,10 +39,10 @@
     <div class="span4 box-border signup">
       <div class="row-fluid">
         <div class="span12">
-          <h2>Sign up!</h2>
-          <p><%= link_to "Sign up as commenter", new_user_registration_registration_url(:close => false), :class => "btn btn-small dark-blue" %> </p>
-        <h2>Get Widget !</h2>
-          <%= link_to "Get widget", new_setup_path(:close => false), :class => "btn btn-small dark-blue" %>
+          <h2><%= t(:sign_up) %></h2>
+          <p><%= link_to t(:sign_up_as_commenter), new_user_registration_registration_url(:close => false), :class => "btn btn-small dark-blue" %> </p>
+        <h2><%= t(:get_widget) %></h2>
+          <%= link_to t(:get_widget), new_setup_path(:close => false), :class => "btn btn-small dark-blue" %>
         </div>
       </div>
 
@@ -53,7 +53,7 @@
           <form>
             <div class="control-group">
               <!--<label class="control-label" for="signup">Enter your email for the latest news:</label>-->
-              <label class="control-label" for="signup">Like the page for the latest news:</label>
+              <label class="control-label" for="signup"><%= t(:like_the_page) %></label>
 
               <div class="controls">
                 <div class="input-append">
@@ -74,7 +74,7 @@
 
   <div class="row-fluid hero-row hidden-phone">
     <div class="span12 hero-title">
-      We are ready for Demo!
+      <%= t(:ready_for_demo) %>
     </div>
   </div>
 
@@ -90,7 +90,7 @@
   <div class="row-fluid">
     <div class="span3 box-border social">
       <div class="row-fluid">
-        <h2>Wanna be social?</h2>
+        <h2><%= t(:wanna_be_social) %></h2>
       </div>
       <div class="row-fluid">&nbsp;</div>
 
@@ -139,7 +139,7 @@
           <!--Talky Cloud Commenting Widget-->
           <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
           <script src="//localhost:3000/assets/dev_embed.js" id="talky-script"></script>
-          <script src="//talkycloud.com/assets/easyXDM.min.js"></script>
+          <script src="//localhost:3000/assets/easyXDM.min.js"></script>
           <!--/Talky Cloud Commenting Widget-->
       <% else %>
           <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
