--- a/app/views/home/maintenance.html.erb
+++ b/app/views/home/maintenance.html.erb
@@ -6,7 +6,7 @@
 
         <div class="box footer">
           <div class="copyright text-transparent center">
-            <div><i class="icon-wrench"></i>Currently on maintenance</div>
+            <div><i class="icon-wrench"></i><%= t(:on_maintenance) %></div>
           </div>
         </div>
       </div>
