--- a/app/views/layouts/widget.html.erb
+++ b/app/views/layouts/widget.html.erb
@@ -9,10 +9,8 @@
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>TalkyCloud</title>
   <meta charset="UTF-8"/>
-  <meta name="description" content="TalkyCloud is a FREE global comment system that improves discussion on websites and connects conversations across the web.
-    You can signup for free online commenting rating widget and you will get a piece of code that will turn your website into an online community and rating platform"/>
-  <meta name="keywords" content="comment, rating, widget, free commenting widget, comments, blog, blogs, yorum, plugin, eklenti, commenting, discussion, webpage, html,
-   website, comment on website, online community"/>
+  <meta name="description" content="<%= t("meta.description") %>"/>
+  <meta name="keywords" content="<%= t("meta.keywords") %>"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <!-- Scripts -->
