--- a/app/views/user_passwords/edit.html.erb
+++ b/app/views/user_passwords/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="login-container center">
-        <div class="title text-transparent">Reset Password</div>
+        <div class="title text-transparent"><%= t("reset_password") %></div>
         <hr class="main">
 
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {class: 'login-form',method: :put }) do |f| %>
@@ -12,17 +12,17 @@
             <ul class="fields-list">
               <li>
                 <i class="icon-key" style="float: left;"></i>
-                <%= f.password_field :password, :autocomplete => "off", :id => "username", :placeholder => "Password" %>
+                <%= f.password_field :password, :autocomplete => "off", :id => "username", :placeholder => t(:password) %>
               </li>
               <li>
                 <i class="icon-key" style="float: left;"></i>
-                <%= f.password_field :password_confirmation, :autocomplete => "off", :id => "username", :placeholder => "Password Confirmation" %>
+                <%= f.password_field :password_confirmation, :autocomplete => "off", :id => "username", :placeholder => t(:password_confirmation) %>
                 <%= f.hidden_field :reset_password_token, :value => params[:reset_password_token] %>
               </li>
             </ul>
 
             <div class="actions">
-              <%= f.submit 'Reset my password', :class => 'btn btn-large medium-blue login-btn' %>
+              <%= f.submit t(:reset_my_password), :class => 'btn btn-large medium-blue login-btn' %>
             </div>
 
 
