--- a/app/views/user_registrations/new.html.erb
+++ b/app/views/user_registrations/new.html.erb
@@ -5,40 +5,40 @@
       <div class="login-container center">
         <% unless session[:omniauth] %>
 
-            <div class="title text-transparent">Sign Up</div>
+            <div class="title text-transparent"><%= t(:sign_up) %></div>
             <hr class="main">
 
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'login-form'}) do |f| %>
                 <ul class="fields-list">
                   <li>
                     <i class="icon-user" style="float: left;"></i>
-                    <%= f.text_field :username, :autocomplete => "off", :autofocus => true, :placeholder => "Username" %>
+                    <%= f.text_field :username, :autocomplete => "off", :autofocus => true, :placeholder => t(:username) %>
                   </li>
 
                   <li>
                     <i class="icon-envelope" style="float: left;"></i>
-                    <%= f.email_field :email, :autocomplete => "off", :id => "username", :placeholder => "Email" %>
+                    <%= f.email_field :email, :autocomplete => "off", :id => "username", :placeholder => t(:email) %>
                   </li>
 
                   <li>
                     <i class="icon-key" style="float: left;"></i>
-                    <%= f.password_field :password, :autocomplete => "off", :id => "password", :placeholder => "Password" %>
+                    <%= f.password_field :password, :autocomplete => "off", :id => "password", :placeholder => t(:password) %>
                   </li>
 
                   <li>
                     <i class="icon-key" style="float: left;"></i>
-                    <%= f.password_field :password_confirmation, :autocomplete => "off", :id => "password_conf", :placeholder => "Password Confirmation" %>
+                    <%= f.password_field :password_confirmation, :autocomplete => "off", :id => "password_conf", :placeholder => t(:password_confirmation) %>
                   </li>
                 </ul>
                 <div class="actions">
-                  <%= f.submit 'Save & Continue', :class => 'btn btn-large medium-blue login-btn' %>
+                  <%= f.submit t(:save_and_continue), :class => 'btn btn-large medium-blue login-btn' %>
                 </div>
 
                 <hr class="main">
                 <div class="social-actions">
-                  <%= link_to "<i class='icon-twitter'></i>".html_safe, "/auth/twitter", :rel => "tooltip", "data-original-title" => "Twitter Login", "data-placement" => "top", :class => "social-link text-transparent" %>
-                  <%= link_to "<i class='icon-facebook'></i>".html_safe, "/auth/facebook", :rel => "tooltip", "data-original-title" => "Facebook Login", "data-placement" => "top", :class => "social-link text-transparent" %>
-                  <%= link_to "Have an Account?", new_session_path(resource_name), :class => "social-link text-transparent", :style => "font-size: 1em; padding-top:15px; float:left;" %>
+                  <%= link_to "<i class='icon-twitter'></i>".html_safe, "/auth/twitter", :rel => "tooltip", "data-original-title" => t(:twitter_login), "data-placement" => "top", :class => "social-link text-transparent" %>
+                  <%= link_to "<i class='icon-facebook'></i>".html_safe, "/auth/facebook", :rel => "tooltip", "data-original-title" => t(:facebook_login), "data-placement" => "top", :class => "social-link text-transparent" %>
+                  <%= link_to t(:have_an_account), new_session_path(resource_name), :class => "social-link text-transparent", :style => "font-size: 1em; padding-top:15px; float:left;" %>
                 </div>
 
             <% end %>
